# libmuzdb

./: CMakeLists.txt  README.md
example/: muzdump.cc  muzscan.cc
include/: muzdb.hpp
include/muzdb/: exception.hpp  metadata.hpp
src/: avformat.cc  avformat.hpp  cdetect.cc  cdetect.hpp  common.hpp  cue.cc  cue.hpp  muzdb.cc  muzdb.hpp  parser.cc  parser.hpp  track.cc  track.hpp
